# hitori-ppo

./: .gitignore  LICENSE  README.md  playground.py  pyproject.toml  requirements.txt  train.py
hitori_env/: __init__.py
hitori_env/envs/: __init__.py  hitori.py  hitori_events.py  hitori_generator.py  hitori_solution.py
hitori_env/wrappers/: __init__.py
ppo/: __init__.py  callbacks.py  env.py  eval_checkpoint.py  evaluation.py  networks.py  policies.py  sampling.py  train.py  train_sft.py
scripts/: analyze_ablation_final_eval.py  benchmark_hitori_solver.py  benchmark_solver_10s_by_size.py  generate_solver_supervision_dataset.py  plot_sft_ablation_eval.py  random_mask_baseline.py  run_ablation_sweep.py  run_final_exps.py  sft_per_size_ablation.py
